# worker_report_generation

./: .env.example  .gitignore  README.md
backend/: app.py  conversation_manager.py  openai_api.py  openai_embedding.py  rag_engine.py  report_generator.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
pdf-vectorizer/: .gitignore  README.md  chunk.py  extract.py  main.py  pyproject.toml  vect.py
pdf-vectorizer/config/: config.yaml
pdf-vectorizer/src/: configuration.py  pdf_extractor.py  pipeline.py  text_chunker.py  text_vectorizer.py
pdf-vectorizer/src/utils/: __init__.py  cli_utils.py  file_utils.py
